# ChessCrab

./: CMakeLists.txt  README.md
headers/: board.h  move.h  movegen.h  types.h
src/: board.cpp  main.cpp  movegen.cpp  test_moves.cpp
